--- a/Liar.html
+++ b/Liar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Step 1</title>
+        <title>Do You Have A Kidney?</title>
         <link rel="stylesheet" href="background.css">
     </head>
     <body>
@@ -10,7 +10,7 @@
         <hr>
         <br><br>
         <center>
-        <a href="Buy a Ferrari.html"><button>Yes!</button></a>
+        <a href="Sell It.html"><button>Yes!</button></a>
         <a href="Liar.html"><button>No</button></a>
         </center>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
