--- a/do you have possesions.html
+++ b/do you have possesions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Step 1</title>
+        <title>Do You Have Possesions?</title>
         <link rel="stylesheet" href="background.css">
     </head>
     <body>
