--- a/Buy a Ferrari.html
+++ b/Buy a Ferrari.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Step 1</title>
+        <title>THEN BUY A FERRARI</title>
         <link rel="stylesheet" href="background.css">
     </head>
     <body>
