--- a/step 2.html
+++ b/step 2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Step 2</title>
+        <title>Do You Have A Job?</title>
         <link rel="stylesheet" href="background.css">
     </head>
     <body>
